adding search button and flip cards

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 
     </header>
     <main> 
+        
+        <input  class= "nombre-pokemon" type="text" id="nombre-pokemon" name="nombre" placeholder="Busqueda pokemon">
         <div id="todos">
             <div class="pokemon-todos" id="listaPokemon">
                 <!-- <div class="pokemon">
