Adding to main banch

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <main> 
         
         <input  class= "nombre-pokemon" type="text" id="nombre-pokemon" name="nombre" placeholder="Busqueda pokemon">
+        <button id="button-pokemon"> Search</button>
         <div id="todos">
             <div class="pokemon-todos" id="listaPokemon">
                 <!-- <div class="pokemon">
